--- a/DischargeAndStage.qmd
+++ b/DischargeAndStage.qmd
@@ -431,3 +431,248 @@ ggplot()+
   theme(plot.margin=grid::unit(c(0,0,0,0), "mm"))
 ```
 
+```{r}
+#now do the same thing, but for zig zag
+#plot locations of sensors
+locs <- data_23 %>% 
+  filter(wshed == "ZZ") %>% 
+  select(ID, lat, long) %>% 
+  unique()
+
+locs_shape <- vect(locs, 
+                   geom=c("long", "lat"), 
+                   crs = "+proj=longlat +datum=WGS84")
+
+
+
+dem <- "./HB/1m hydro enforced DEM/dem1m.tif"
+m1 <- rast(dem)
+m10 <- aggregate(m1, 10)
+plot(m10)
+lcc <- terra::project(locs_shape,crs(m10))
+
+#save raster, because whitebox wants it is a files location instead of an object in R
+writeRaster(m10, "./fb_dems/10mdem.tif", overwrite = TRUE)
+
+
+breach_output <- "./fb_dems/10mdem_breach.tif"
+wbt_breach_depressions_least_cost(
+  dem = "./fb_dems/10mdem.tif",
+  output = breach_output,
+  dist = 10,
+  fill = TRUE)
+
+fill_output <- "./fb_dems/10mdem_fill.tif"
+wbt_fill_depressions_wang_and_liu(
+  dem = breach_output,
+  output = fill_output
+)
+
+flowacc_output <- "./fb_dems/10mdem_flowacc.tif"
+wbt_d_inf_flow_accumulation(input = fill_output,
+                            output = flowacc_output,
+                            out_type = "Specific Contributing Area")
+
+slope_output <- "./fb_dems/10mdem_slope.tif"
+wbt_slope(dem = fill_output,
+          output = slope_output,
+          units = "degrees")
+
+twi_output <- "./fb_dems/10mdem_twi.tif"
+wbt_wetness_index(sca = flowacc_output, #flow accumulation
+                  slope = slope_output,
+                  output = twi_output)
+
+twi2 <- terra::rast(twi_output)
+plot(twi2)
+
+#just extract values from 10 m twi raster
+twi_ex <- extract(twi2, lcc)
+
+```
+
+```{r}
+#chunk that reads in stage, converts to proper units
+#read in stage, convert to a height
+ZZ_air <- read_csv("./PressureTransducers_11_14_23/ZZ_air.csv", skip = 1) %>% 
+  select(2:3) %>% 
+  rename(DATETIME = 1,
+         pressure_psi_air = 2) %>% 
+  mutate(DATETIME = mdy_hms(DATETIME))
+
+ZZ_water <- read_csv("./PressureTransducers_11_14_23/ZZ_water.csv", skip = 1) %>% 
+  select(2:3) %>% 
+  rename(DATETIME = 1,
+         pressure_psi_water = 2) %>% 
+  mutate(DATETIME = mdy_hms(DATETIME))
+
+ZZ_water %>% 
+  left_join(ZZ_air, by = "DATETIME") %>% 
+  mutate(diff_psi = pressure_psi_water - pressure_psi_air) %>% 
+  mutate(stage_cm = ((diff_psi*6894.76) / (997 * 9.8)) * 100 * 0.393701) %>% 
+  ggplot(aes(x = DATETIME, y = stage_cm))+
+  geom_line()+
+  theme_classic()+
+  labs(title = "Falls Brook Stage",
+       x = "",
+       y = "Stage (in)")
+#convert pressure to height of water
+#h = p / (ρ * g)
+#h = height in m
+#density of water = 997 kg/m³
+#gravitational acceleration = 9.8 m/s²
+#convert psi to pascals, 1 psi = 6894.76 bars
+
+library(patchwork)
+fbAirPlot <- ggplot(ZZ_air, aes(x = DATETIME, y = pressure_psi_air))+
+  geom_line()+
+  theme_classic()+
+  ggtitle("Falls Brook Air pressure")
+fbWaterPlot <- ggplot(ZZ_water, aes(x = DATETIME, y = pressure_psi_water))+
+  geom_line()+
+  theme_classic()+
+  ggtitle("Falls Brook Water pressure")
+
+
+fbAirPlot / fbWaterPlot
+
+data_23$mins <- minute(data_23$datetime)
+
+#Fit a logistic regression to falls brook stage
+#outputs df with stage in cm
+ZZ_stage <- ZZ_water %>% 
+  left_join(ZZ_air, by = "DATETIME") %>% 
+  mutate(diff_psi = pressure_psi_water - pressure_psi_air) %>% 
+  mutate(stage_cm = ((diff_psi*6894.76) / (997 * 9.8)) * 100 * 0.393701)
+
+ready2split <-  data_23 %>% 
+  filter(wshed == "ZZ", mins %in% c(0, 30)) %>% 
+  select(datetime, ID, lat, long, binary) %>% 
+  left_join(twi_ex, by = "ID") %>% 
+  rename("DATETIME" = datetime,
+         "twi" = '10mdem_twi') %>% 
+  right_join(select(ZZ_stage, c(DATETIME, stage_cm)), by = "DATETIME") %>% 
+  #select(DATETIME, ID, binary, twi, Q_mm_day) %>% 
+  mutate(twi = log(twi))
+set.seed(123)
+train_full <- ready2split %>% 
+  slice_sample(prop = 0.8)
+
+#create test dataset
+test  <- anti_join(ready2split, train_full, by = c("DATETIME", "ID"))
+
+train_values <- train_full %>% 
+  select(binary, twi, stage_cm)
+
+model <- glm(binary ~.,family=binomial(link='logit'),data=train_values)
+summary(model)
+
+john_reg <- function(input_logtwi, inputQ){
+  #b0, or intercept from Kevin's email from Carrie, might need to redo regression
+  b0 <- unname(model$coefficients[1])
+  #all ofther coefs from Jensen et al. 2018
+  twi_coef <- unname(model$coefficients[2])
+  flow_coef <- unname(model$coefficients[3])
+
+  b1x1 <- flow_coef * inputQ
+  b2x2 <- twi_coef * input_logtwi
+
+  #logistic regression from Jensen et al. 2018
+  p <- exp(b0 + b1x1 + b2x2)/(1 + exp(b0 + b1x1 + b2x2))
+  return(p)
+}
+
+tested <- ready2split %>% 
+    mutate(percent_flowing = john_reg(log(twi), stage_cm) * 100,
+           mins = minute(DATETIME)) %>% 
+  filter(mins %in% c(0, 30))
+
+#determine the number of sensor observations preserved in the test dataset at each timestep
+tested %>% 
+  group_by(DATETIME) %>% 
+  summarise(count = length(unique(ID)))
+
+
+add_thresholds <- function(df){
+  df$per_90 <- 0
+  df$per_90[df$percent_flowing >= 90] <- 1
+
+  df$per_75 <- 0
+  df$per_75[df$percent_flowing >= 75] <- 1
+
+  df$per_50 <- 0
+  df$per_50[df$percent_flowing >= 50] <- 1
+  return(df)
+}
+
+#testing to make sure that compare function is doing what I want it to
+add_thresholds(tested) %>% 
+  group_by(DATETIME, stage_cm) %>% 
+  summarise(threshold_90 = compare(binary, per_90, DATETIME),
+            count = length(unique(ID)))
+
+out <-  add_thresholds(tested) %>% 
+  group_by(ID) %>% 
+  summarise(threshold_90 = compare(binary, per_90, DATETIME),
+            threshold_75 = compare(binary, per_75, DATETIME),
+            threshold_50 = compare(binary, per_50, DATETIME)) %>% 
+  pivot_longer(cols = starts_with("threshold"), 
+               names_to = "threshold", 
+               values_to = "percent_agreement")
+
+ggplot(out, aes(x = threshold, y = percent_agreement))+
+  geom_boxplot()+
+  ggtitle("Agreement between log regression and observations, FB")
+
+
+
+hydro <-  add_thresholds(tested) %>% 
+  group_by(DATETIME, stage_cm) %>% 
+  summarise(threshold_90 = compare(binary, per_90, DATETIME),
+            threshold_75 = compare(binary, per_75, DATETIME),
+            threshold_50 = compare(binary, per_50, DATETIME)) %>% 
+  pivot_longer(cols = starts_with("threshold"), 
+               names_to = "threshold", 
+               values_to = "percent_agreement")
+
+pt1 <- hydro %>% 
+filter(DATETIME > "2023-07-23 00:00:00" & DATETIME < "2023-9-20 00:00:00")
+pt2 <- hydro %>% 
+filter(DATETIME > "2023-09-23 00:00:00" & DATETIME < "2023-11-10 00:00:00")
+
+rbind(pt1, pt2) %>% 
+#filter(DATETIME > "2023-10-15 00:00:00" & DATETIME < "2023-11-01 00:00:00") %>% 
+ggplot()+
+  geom_line(aes(x = DATETIME, y = stage_cm, color = percent_agreement), lwd = 1)+
+  facet_wrap(~threshold, ncol = 1)+
+  #ylim(c(10, 11))+
+  theme_classic()+
+  scale_color_gradientn(colors = rev(wes_palette("Zissou1", 100, type = "continuous")))
+
+
+#does not work yet
+points_w3 <- vect(out, geom=c("long", "lat"), crs = "+proj=longlat +datum=WGS84")
+ggplot()+
+  geom_spatvector(data = w3_stream_wgs, color = "grey", lwd = 1.5)+
+  geom_spatvector(data = points_w3, aes(color = percent_agreement), size = 3)+
+  facet_wrap(~threshold)+#aes(color = percent_flowing), size = 2)+
+  #geom_text_repel(data = simple_table, aes(x = long, y = lat, label = number))+
+  theme_void()+
+  scale_color_binned(type = "viridis",
+                      breaks = c(30, 60, 90)#,
+                      #limits = c(0, 40)
+                     )+
+  labs(title = "Agreement with New model, 7/23 - 11/23")+
+  theme(plot.margin=grid::unit(c(0,0,0,0), "mm"))
+```
+
+```{r}
+#what if I try other topographic metrics?
+#topographic position index
+wbt_relative_topographic_position(
+  dem,
+  output)
+
+#also drainage area
+```
+
