--- a/TestingFrameworks.qmd
+++ b/TestingFrameworks.qmd
@@ -787,17 +787,167 @@ library(hydroEvents)
 #qdata = WQ_Q$qdata[[1]]
 #BF_res = eventBaseflow(qdata$Q_cumecs)
 #limbs(data = qdata$Q_cumecs, dates = NULL, events = BF_res, main = "with 'eventBaseflow'")
-plot <- ready2split %>% 
-  select(DATETIME, Q_mm_day) %>% 
-  unique() %>% 
-  drop_na() %>% 
+#Use this plot to manually extract rising and falling limbs
+plot <- justQ %>%  
   ggplot(aes(x = DATETIME, y = Q_mm_day))+
   geom_line()+
-  geom_point()
+  geom_point(aes(color = start))
 
 ggplotly(plot)
 
-#BF_res <- eventBaseflow(justQ$Q_mm_day, BFI_Th = 0.7, min.diff = 1)
-#limbs(data = justQ$Q_mm_day, dates =justQ$DATETIME, events = BF_res)
+justQ <- ready2split %>% 
+  select(DATETIME, Q_mm_day) %>% 
+  arrange(DATETIME) %>% 
+  unique() %>% 
+  drop_na() %>% 
+  mutate(lab = as.numeric(row_number()))
+
+justQ[5812:5826,]
+  
+BF_res <- eventBaseflow(justQ$Q_mm_day, BFI_Th = 0.5, min.diff = 1)
+lick <- limbs(data = justQ$Q_mm_day, 
+               dates =justQ$DATETIME, 
+               events = BF_res, 
+               to.plot = FALSE)
+
+#more tidy attempt
+events <- lick %>% 
+  mutate(event = as.numeric(row_number())) %>% 
+  select(ris.srt:event) %>% 
+  pivot_longer(cols = ris.srt:fal.end) %>% 
+  rename(lab = value) %>% 
+  left_join(justQ, by = "lab") %>% 
+  mutate(startOrstop = substr(name, 5,7),
+         name = substr(name, 1,3)) 
+
+#sometimes you have to use a for loop
+id_events <- function(df, ){
+  
+}
+
+number_of_events <- length(unique(events$event))
+for(i in 1:number_of_events){
+  one_event <- events %>% 
+    filter(event == i)
+  
+  #rising start and end
+  start_df <- one_event %>% 
+    filter(name == "ris" & startOrstop == "srt")
+  start <- start_df$DATETIME[1]
+  print(start)
+  # justQ %>% 
+  #   filter(DATETIME >= start & DATETIME <= end)
+#output a dataframe with all dates, event number id, rising or falling limb, and end
+}
+
+#so frustrated, the wheels are spinning, just ditch this for now and come back to it later.
+
 ```
+
+```{r}
+#i have a thing called events, how do I get the average accuracy for the range of datetimes between the start and stop of each?
+
+```
+
+```{r}
+#what if I try to apply the botter and durighetto techniques?
+#calculate local persistency
+data_23 %>% 
+  filter(wshed == "W3", mins %in% c(0, 30)) %>% 
+  select(datetime, ID, lat, long, binary) %>% 
+  group_by(ID) %>% 
+  summarise(pk = sum(binary)/length(binary)) %>% 
+  arrange(pk)
+  # left_join(twi_ex, by = "ID") %>% 
+  # rename("DATETIME" = datetime,
+  #        "twi" = w3_dem_twi) %>% 
+  # left_join(select(q_23_f, c(DATETIME, Q_mm_day)), by = "DATETIME") %>% 
+  # #select(DATETIME, ID, binary, twi, Q_mm_day) %>% 
+  # mutate(twi = log(twi))
+
+#each node needs to have some amount of stream length associated with it, and that turns on when that node turns on, until the node associated stream length matches the actual
+#instead of stream length, how about discharge or stage?
+#can I figure out a chunk of the discharge or stage that is associated with each one of these?
+
+#plot persistency versus discharge
+train_full <- ready2split %>% 
+  slice_sample(prop = 0.8)
+
+pks <- data_23 %>% 
+  filter(wshed == "W3", mins %in% c(0, 30)) %>% 
+  select(datetime, ID, lat, long, binary) %>% 
+    group_by(ID) %>% 
+    slice_sample(prop = 0.8) %>% 
+  rename("DATETIME" = datetime) %>% 
+  left_join(select(q_23_f, c(DATETIME, Q_mm_day)), by = "DATETIME") %>% 
+  summarise(pk = sum(binary)/length(binary)) %>% 
+  select(ID, pk) %>% 
+  ungroup()
+  
+#how to determine the amount of discharge that increases due to one sensor location turning on
+train_values <-  data_23 %>% 
+  filter(wshed == "W3", mins %in% c(0, 30)) %>% 
+  select(datetime, ID, lat, long, binary) %>% 
+    slice_sample(prop = 0.8) %>% 
+  rename("DATETIME" = datetime) %>% 
+  left_join(select(q_23_f, c(DATETIME, Q_mm_day)), by = "DATETIME") %>% 
+  left_join(pks, by = "ID") %>% 
+  select(binary, pk, Q_mm_day)
+
+model <- glm(binary ~.,family=binomial(link='logit'),data=train_values)
+summary(model)
+
+john_reg <- function(input_logtwi, inputQ){
+  #b0, or intercept from Kevin's email from Carrie, might need to redo regression
+  b0 <- unname(model$coefficients[1])
+  #all ofther coefs from Jensen et al. 2018
+  twi_coef <- unname(model$coefficients[2])
+  flow_coef <- unname(model$coefficients[3])
+
+  b1x1 <- flow_coef * inputQ
+  b2x2 <- twi_coef * input_logtwi
+
+  #logistic regression from Jensen et al. 2018
+  p <- exp(b0 + b1x1 + b2x2)/(1 + exp(b0 + b1x1 + b2x2))
+  return(p)
+}
+
+tested <- data_23 %>% 
+  filter(wshed == "W3", mins %in% c(0, 30)) %>% 
+  select(datetime, ID, lat, long, binary) %>% 
+  rename("DATETIME" = datetime) %>% 
+  left_join(select(q_23_f, c(DATETIME, Q_mm_day)), by = "DATETIME") %>% 
+  left_join(pks, by = "ID") %>%
+  mutate(percent_flowing = john_reg(pk, Q_mm_day) * 100)
+
+add_thresholds <- function(df){
+  df$per_90 <- 0
+  df$per_90[df$percent_flowing >= 90] <- 1
+
+  df$per_75 <- 0
+  df$per_75[df$percent_flowing >= 75] <- 1
+
+  df$per_50 <- 0
+  df$per_50[df$percent_flowing >= 50] <- 1
+  return(df)
+}
+
+#testing to make sure that compare function is doing what I want it to
+add_thresholds(tested) %>% 
+  group_by(DATETIME, stage_cm) %>% 
+  summarise(threshold_90 = compare(binary, per_90, DATETIME),
+            count = length(unique(ID)))
+
+out <-  add_thresholds(tested) %>% 
+  group_by(ID) %>% 
+  summarise(threshold_90 = compare(binary, per_90, DATETIME),
+            threshold_75 = compare(binary, per_75, DATETIME),
+            threshold_50 = compare(binary, per_50, DATETIME)) %>% 
+  pivot_longer(cols = starts_with("threshold"), 
+               names_to = "threshold", 
+               values_to = "percent_agreement")
+
+ggplot(out, aes(x = threshold, y = percent_agreement))+
+  geom_boxplot()+
+  ggtitle("Agreement between log regression and observations, FB")```
 
