--- a/TestingFrameworks.qmd
+++ b/TestingFrameworks.qmd
@@ -11,7 +11,8 @@ Test different theoretical frameworks using my data.
 ```{r reading-in-STIC-obs}
 #loading packages
 library(pacman)
-p_load(tidyverse, terra, tidyterra, whitebox, scales, wesanderson, caret, plotly)
+p_load(tidyverse, terra, tidyterra, whitebox, scales, wesanderson, caret, plotly,
+       ggnewscale)
 
 #reading in final format data for summer 23
 data_23 <- read_csv("./DataForMary/HB_stic.csv")
@@ -1006,7 +1007,9 @@ Modeling local persistency seems weird. Yesterday talking with Kevin I feel like
 
 ```{r}
 #have not applied durighetto technique to other watersheds, do that here
+#use persistency and stage to model whether the streams are flowing
 #falling for the classic blunder- need to re-read data in
+#reading in and formatting STIC observations
 data_23 <- read_csv("./DataForMary/HB_stic.csv")
 data_23$binary <- 1
 data_23$binary[data_23$wetdry == "dry"] <- 0
@@ -1036,10 +1039,10 @@ FB_stage <- FB_water %>%
   left_join(FB_air, by = "DATETIME") %>% 
   mutate(diff_psi = pressure_psi_water - pressure_psi_air) %>% 
   mutate(stage_cm = ((diff_psi*6894.76) / (997 * 9.8)) * 100 * 0.393701)
+
 #plot persistency versus discharge
 #first calculate local persistency (pk)
-#pks <- 
-data_23 %>% 
+pks <- data_23 %>% 
   filter(wshed == "FB", mins %in% c(0, 30)) %>% 
   select(datetime, ID, lat, long, binary) %>% 
     group_by(ID) %>% 
@@ -1050,14 +1053,15 @@ data_23 %>%
   ungroup()
   
 #how to determine the amount of discharge that increases due to one sensor location turning on
-train_values <-  data_23 %>% 
+train_values <-  
+  data_23 %>% 
   filter(wshed == "FB", mins %in% c(0, 30)) %>% 
   select(datetime, ID, lat, long, binary) %>% 
-    slice_sample(prop = 0.8) %>% 
+    slice_sample(prop = 0.8, replace = FALSE) %>% 
   rename("DATETIME" = datetime) %>% 
-  left_join(select(q_23_f, c(DATETIME, Q_mm_day)), by = "DATETIME") %>% 
+  right_join(select(FB_stage, c(DATETIME, stage_cm)), by = "DATETIME") %>% 
   left_join(pks, by = "ID") %>% 
-  select(binary, pk, Q_mm_day)
+  select(binary, pk, stage_cm)
 
 model <- glm(binary ~.,family=binomial(link='logit'),data=train_values)
 summary(model)
@@ -1077,17 +1081,14 @@ john_reg <- function(input_logtwi, inputQ){
   return(p)
 }
 
-#tested <- 
+tested <- 
   data_23 %>% 
-  filter(wshed == "FB") %>% 
+  filter(wshed == "FB", mins %in% c(0, 30)) %>% 
   select(datetime, ID, lat, long, binary) %>% 
-  left_join(FB_twi_ex, by = "ID") %>% 
-  rename("DATETIME" = datetime,
-         "twi" = '10mdem_twi') #%>% 
-  mutate(twi = log(twi)) %>% 
+  rename("DATETIME" = datetime) %>% 
   right_join(select(FB_stage, c(DATETIME, stage_cm)), by = "DATETIME") %>% 
-  left_join(pks, by = "ID") %>%
-  mutate(percent_flowing = john_reg(pk, Q_mm_day) * 100)
+  left_join(pks, by = "ID") %>% 
+  mutate(percent_flowing = john_reg(pk, stage_cm) * 100)
 
 
 add_thresholds <- function(df){
@@ -1113,6 +1114,185 @@ out <-  add_thresholds(tested) %>%
 
 ggplot(out, aes(x = threshold, y = percent_agreement))+
   geom_boxplot()+
-  ggtitle("Durighetto local persistency, W3")
+  ggtitle("Durighetto local persistency, FB")
+```
+
+```{r}
+#now make the graph from above, but for zig zag
+#assume that all of the files are read in from above
+
+#read in and format ZZ stage data
+ZZ_air <- read_csv("./PressureTransducers_11_14_23/ZZ_air.csv", skip = 1) %>% 
+  select(2:3) %>% 
+  rename(DATETIME = 1,
+         pressure_psi_air = 2) %>% 
+  mutate(DATETIME = mdy_hms(DATETIME))
+
+ZZ_water <- read_csv("./PressureTransducers_11_14_23/ZZ_water.csv", skip = 1) %>% 
+  select(2:3) %>% 
+  rename(DATETIME = 1,
+         pressure_psi_water = 2) %>% 
+  mutate(DATETIME = mdy_hms(DATETIME))
+
+ZZ_stage <- ZZ_water %>% 
+  left_join(ZZ_air, by = "DATETIME") %>% 
+  mutate(diff_psi = pressure_psi_water - pressure_psi_air) %>% 
+  mutate(stage_cm = ((diff_psi*6894.76) / (997 * 9.8)) * 100 * 0.393701)
+
+
+#plot persistency versus discharge
+#first calculate local persistency (pk)
+pks <- data_23 %>% 
+  filter(wshed == "ZZ", mins %in% c(0, 30)) %>% 
+  select(datetime, ID, lat, long, binary) %>% 
+    group_by(ID) %>% 
+  rename("DATETIME" = datetime) %>% 
+  right_join(select(ZZ_stage, c(DATETIME, stage_cm)), by = "DATETIME") %>% 
+  summarise(pk = sum(binary)/length(binary)) %>% 
+  select(ID, pk) %>% 
+  ungroup()
+  
+#how to determine the amount of discharge that increases due to one sensor location turning on
+train_values <-  
+  data_23 %>% 
+  filter(wshed == "ZZ", mins %in% c(0, 30)) %>% 
+  select(datetime, ID, lat, long, binary) %>% 
+    #slice_sample(prop = 0.8, replace = FALSE) %>% 
+  rename("DATETIME" = datetime) %>% 
+  right_join(select(ZZ_stage, c(DATETIME, stage_cm)), by = "DATETIME") %>% 
+  left_join(pks, by = "ID") %>% 
+  select(binary, pk, stage_cm)
+
+model <- glm(binary ~.,family=binomial(link='logit'),data=train_values)
+summary(model)
+
+john_reg <- function(input_logtwi, inputQ){
+  #b0, or intercept from Kevin's email from Carrie, might need to redo regression
+  b0 <- unname(model$coefficients[1])
+  #all ofther coefs from Jensen et al. 2018
+  twi_coef <- unname(model$coefficients[2])
+  flow_coef <- unname(model$coefficients[3])
+
+  b1x1 <- flow_coef * inputQ
+  b2x2 <- twi_coef * input_logtwi
+
+  #logistic regression from Jensen et al. 2018
+  p <- exp(b0 + b1x1 + b2x2)/(1 + exp(b0 + b1x1 + b2x2))
+  return(p)
+}
+
+tested <- 
+  data_23 %>% 
+  filter(wshed == "ZZ", mins %in% c(0, 30)) %>% 
+  select(datetime, ID, lat, long, binary) %>% 
+  rename("DATETIME" = datetime) %>% 
+  right_join(select(ZZ_stage, c(DATETIME, stage_cm)), by = "DATETIME") %>% 
+  left_join(pks, by = "ID") %>% 
+  mutate(percent_flowing = john_reg(pk, stage_cm) * 100)
+
+
+add_thresholds <- function(df){
+  df$per_90 <- 0
+  df$per_90[df$percent_flowing >= 90] <- 1
+
+  df$per_75 <- 0
+  df$per_75[df$percent_flowing >= 75] <- 1
+
+  df$per_50 <- 0
+  df$per_50[df$percent_flowing >= 50] <- 1
+  return(df)
+}
+
+out <-  add_thresholds(tested) %>% 
+  group_by(ID) %>% 
+  summarise(threshold_90 = compare(binary, per_90, DATETIME),
+            threshold_75 = compare(binary, per_75, DATETIME),
+            threshold_50 = compare(binary, per_50, DATETIME)) %>% 
+  pivot_longer(cols = starts_with("threshold"), 
+               names_to = "threshold", 
+               values_to = "percent_agreement")
+
+ggplot(out, aes(x = threshold, y = percent_agreement))+
+  geom_boxplot()+
+  ggtitle("Durighetto local persistency, ZZ")
+
+#how does durighetto do through time?
+start <- "2023-08-07 00:00:00"
+stop <- "2023-08-14 00:00:00"
+tested %>% 
+  add_thresholds() %>% 
+ # group_by(DATETIME, stage_cm) %>% 
+    group_by(ID, DATETIME) %>% 
+
+  summarise(threshold_90 = compare(binary, per_90, DATETIME),
+            threshold_75 = compare(binary, per_75, DATETIME),
+            threshold_50 = compare(binary, per_50, DATETIME)) %>% 
+  pivot_longer(cols = starts_with("threshold"), 
+               names_to = "threshold", 
+               values_to = "percent_agreement") %>% 
+filter(DATETIME > start & DATETIME < stop) %>% 
+  filter(threshold == "threshold_50") %>%
+  summarise(count = length(DATETIME)) %>% 
+  print(n = 30)
+  #filter(ID %in% seq(15,30,1)) %>% 
+ggplot()+
+  geom_line(aes(x = DATETIME, y = stage_cm, color = percent_agreement), lwd = 1)+
+  #facet_wrap(~ID)+
+  theme_classic()+
+  scale_color_gradientn(colors = rev(wes_palette("Zissou1", 100, type = "continuous")))
+
+```
+
+Making maps for poster
+```{r}
+#read in DEM of whole valley, 1m resolution
+dem <- "./HB/1m hydro enforced DEM/dem1m.tif"
+m1 <- rast(dem)
+plot(m1)
+
+#get sensor locations from STIC data, format
+locs <- data_23 %>% 
+  filter(wshed == "FB") %>% 
+  select(ID, lat, long) %>% 
+  unique()
+#convert STIC data to a SpatVector data format
+locs_shape <- vect(locs, 
+                   geom=c("long", "lat"), 
+                   crs = "+proj=longlat +datum=WGS84")
+plot(locs_shape)
+#reproject coordinates from WGS84 to NAD83 19N, which is the projection of raster
+lcc <- terra::project(locs_shape, crs(m1))
+plot(lcc)
+#define the rectangular area that will be shown on final map
+ybounds <- c(4868900,4869500)
+xbounds <- c(279400, 280500)
+plot(m1, xlim = xbounds, ylim = ybounds)
+points(lcc)
+
+#create a SpatExtent from a vector (length=4; order=xmin, xmax, ymin, ymax)
+crop1 <- crop(m1, ext(c(xbounds, ybounds)))
+plot(crop1)
+
+writeRaster(crop1, "./fb_dems/1mdem_crop.tif", overwrite = TRUE)
+
+fb_crop <- "./fb_dems/1mdem_crop.tif"
+hillshade_out <- "./fb_dems/1mdem_hillshade.tif"
+wbt_hillshade(
+  dem = fb_crop,
+  output = hillshade_out,
+)
+hill <- rast(hillshade_out)
+plot(hill)
+
+ggplot()+
+  geom_spatraster(data = hill)+
+  theme_void()+
+  theme(legend.position = "bottom")+
+  scale_fill_gradientn(colors = c("black", "gray9", "gray48","lightgray", "white"))+
+    new_scale_fill() +
+  geom_spatraster(data = crop1, alpha = 0.5)+
+  geom_sf(data = lcc, colour = "midnightblue", pch = 19) +
+  scale_fill_hypso_c(palette = "dem_screen")
+
 ```
 
