--- a/TestingFrameworks.qmd
+++ b/TestingFrameworks.qmd
@@ -12,7 +12,7 @@ Test different theoretical frameworks using my data.
 #loading packages
 library(pacman)
 p_load(tidyverse, terra, tidyterra, whitebox, scales, wesanderson, caret, plotly,
-       ggnewscale)
+       ggnewscale, sf)
 
 #reading in final format data for summer 23
 data_23 <- read_csv("./DataForMary/HB_stic.csv")
@@ -1250,6 +1250,95 @@ dem <- "./HB/1m hydro enforced DEM/dem1m.tif"
 m1 <- rast(dem)
 plot(m1)
 
+#define the rectangular area that will be shown on final map
+ybounds <- c(4868850,4869650)
+xbounds <- c(279350, 280450)
+plot(m1, xlim = xbounds, ylim = ybounds)
+points(lcc)
+
+#create a SpatExtent from a vector (length=4; order=xmin, xmax, ymin, ymax)
+crop1 <- crop(m1, ext(c(xbounds, ybounds)))
+plot(crop1)
+#save cropped 1m dem to reduce processing time below, and gurantee that everything has the same extent
+writeRaster(crop1, "./fb_dems/1mdem_crop.tif", overwrite = TRUE)
+#read in cropped dem
+fb_crop <- "./fb_dems/1mdem_crop.tif"
+
+#read in shapefile of stream network shape from ARC file on windows computer
+fb_net <- vect("./carrieZigZag/FB_network.shp")
+plot(fb_net)
+
+###pour point to define where the watershed boundary is
+#manually type coords from windows computer
+fb_pour_coords <- data.frame("easting" = 280400,
+                             "northing" = 4869120)
+#convert to SpatVector object
+fb_pour <- vect(fb_pour_coords,
+                geom = c("easting", "northing"),
+                   crs = crs(m1))
+#snap pour point to make sure it lies on flowlines
+#fb_pour <- snap(fb_pour, fb_net, tol = 1)
+
+#save to file for use in whitebox functions
+fb_pour_filename <- "./fb_dems/fb_pour.shp"
+writeVector(fb_pour, fb_pour_filename, overwrite=TRUE)
+
+####delineate watershed and keep watershed boundary
+#breach and fill I guess
+fb_crop <- "./fb_dems/1mdem_crop.tif"
+
+fb_breached <- "./fb_dems/1mdem_breach.tif"
+wbt_breach_depressions_least_cost(
+  dem = fb_crop,
+  output = fb_breached,
+  dist = 1,
+  fill = TRUE)
+
+fb_filled <- "./fb_dems/1mdem_fill.tif"
+wbt_fill_depressions_wang_and_liu(
+  dem = fb_breached,
+  output = fb_filled
+)
+#calculate flow accumulation and direction
+fb_flowacc <- "./fb_dems/1mdem_fb_flowacc.tif"
+wbt_d8_flow_accumulation(input = fb_filled,
+                         output = fb_flowacc)
+plot(rast(fb_flowacc))
+fb_d8pt <- "./fb_dems/1mdem_fb_d8pt.tif"
+wbt_d8_pointer(dem = fb_filled,
+               output = fb_d8pt)
+plot(rast(fb_d8pt))
+
+
+#delineate streams
+fb_streams <- "./fb_dems/fb_streams.tif"
+wbt_extract_streams(flow_accum = fb_flowacc,
+                    output = fb_streams,
+                    threshold = 8000)
+plot(rast(fb_streams))
+points(lcc)
+#snap pour point to streams
+fb_pour_snap <- "./fb_dems/fb_pour_snap.shp"
+wbt_jenson_snap_pour_points(pour_pts = fb_pour_filename,
+                            streams = fb_streams,
+                            output = fb_pour_snap,
+                            snap_dist = 10)
+fb_pour_snap_read <- vect("./fb_dems/fb_pour_snap.shp")
+plot(rast(fb_streams), 
+     xlim = c(280200, 280410),
+     ylim = c(4869300, 4869000))
+points(fb_pour_snap_read, pch = 1)
+
+fb_shed <- "./fb_dems/fb_shed.tif"
+wbt_watershed(d8_pntr = fb_d8pt,
+              pour_pts = fb_pour_snap,
+              output = fb_shed)
+
+plot(rast(fb_shed))
+#convert raster of watershed area to vector for final mapping
+fb_outline <- as.polygons(rast(fb_shed), extent=FALSE)
+plot(fb_outline)
+
 #get sensor locations from STIC data, format
 locs <- data_23 %>% 
   filter(wshed == "FB") %>% 
@@ -1263,19 +1352,8 @@ plot(locs_shape)
 #reproject coordinates from WGS84 to NAD83 19N, which is the projection of raster
 lcc <- terra::project(locs_shape, crs(m1))
 plot(lcc)
-#define the rectangular area that will be shown on final map
-ybounds <- c(4868900,4869500)
-xbounds <- c(279400, 280500)
-plot(m1, xlim = xbounds, ylim = ybounds)
-points(lcc)
 
-#create a SpatExtent from a vector (length=4; order=xmin, xmax, ymin, ymax)
-crop1 <- crop(m1, ext(c(xbounds, ybounds)))
-plot(crop1)
-
-writeRaster(crop1, "./fb_dems/1mdem_crop.tif", overwrite = TRUE)
-
-fb_crop <- "./fb_dems/1mdem_crop.tif"
+#assign destination for hillshade calculation
 hillshade_out <- "./fb_dems/1mdem_hillshade.tif"
 wbt_hillshade(
   dem = fb_crop,
@@ -1284,6 +1362,7 @@ wbt_hillshade(
 hill <- rast(hillshade_out)
 plot(hill)
 
+#final plot with cropped hillshade and dem, STIC locations, watershed boundary, and stream network.
 ggplot()+
   geom_spatraster(data = hill)+
   theme_void()+
@@ -1291,8 +1370,11 @@ ggplot()+
   scale_fill_gradientn(colors = c("black", "gray9", "gray48","lightgray", "white"))+
     new_scale_fill() +
   geom_spatraster(data = crop1, alpha = 0.5)+
+    geom_sf(data = fb_outline, fill = NA, color = "brown", lwd = 0.8) +
   geom_sf(data = lcc, colour = "midnightblue", pch = 19) +
-  scale_fill_hypso_c(palette = "dem_screen")
+  geom_sf(data = fb_net, colour = "black") +
+  geom_sf(data = fb_pour, colour = "black", pch = 8) +
+   scale_fill_hypso_c(palette = "dem_screen")
 
 ```
 
