--- a/TestingFrameworks.qmd
+++ b/TestingFrameworks.qmd
@@ -6,21 +6,22 @@ editor_options:
   chunk_output_type: console
 ---
 
-9/8/24
-Test different theoretical frameworks using my data.
+9/8/24 Test different theoretical frameworks using my data.
+
 ```{r reading-in-STIC-obs}
 #loading packages
 library(pacman)
 p_load(tidyverse, terra, tidyterra, whitebox, scales, wesanderson, caret, plotly,
-       ggnewscale, sf, rgeoboundaries, elevatr)
+       ggnewscale, sf, rgeoboundaries, elevatr, patchwork)
 
 #reading in final format data for summer 23
 data_23 <- read_csv("./DataForMary/HB_stic.csv")
 #reading in final format data for summer 24
 data_24 <- read_csv("./summer2024/STICS2024.csv")
 ```
-9/10/24
-Make figures showing the full period of record
+
+9/10/24 Make figures showing the full period of record
+
 ```{r full-record-w3-plot}
 binary <- c("#DB995A",
             "#586BA4"
@@ -48,6 +49,7 @@ ggplot()+
 ```
 
 FB
+
 ```{r full-record-FB-plot}
 
 head(filter(data_24, wshed == "FB", sensor == 21736589))
@@ -68,7 +70,9 @@ ggplot()+
        x = "")+
   theme_classic()
 ```
+
 ZZ
+
 ```{r full-record-zz-plot}
 ggplot()+
   geom_tile(data = filter(data_23, wshed == "ZZ", mins %in% c(0, 30)),
@@ -88,6 +92,7 @@ ggplot()+
 ```
 
 Start with Carrie's model- how well does it capture the dynamics that I observed?
+
 ```{r}
 #read in discharge from W3-- input to Carrie's model, discharge in L/s
 #q <- read_csv("https://portal.edirepository.org/nis/dataviewer?packageid=knb-lter-hbr.1.17&entityid=efc477b3ef1bb3dd8b9355c9115cd849")
@@ -124,7 +129,7 @@ ggplot(q_23_f, aes(x  = DATETIME, y = Q_mm_day))+
   theme_classic()
 
 ```
-  
+
 ```{r}
 #calculate then extract the TWI at each of the sensor locations. May be tricky to make sure that they line up with flowlines, or places with greatest drainage area.
 twi3 <- "./w3_dems/w3_dem_twi.tif"
@@ -456,7 +461,6 @@ tiny_bagel <- everything_bagel %>%
 #results between 1m resolution and 10 m resolution are very different, as I thought they should be, and the 
 ```
 
-
 ```{r}
 #Carrie's model, when averaged across every site and every time is a coinflip
 #fit my own regression to the dataset
@@ -575,7 +579,6 @@ ggplot()+
 
 ```
 
-
 ```{r}
 #final version of discharge through time colored by model fidelity, using wes anderson color palette
 start <- "2023-08-07 00:00:00"
@@ -591,15 +594,18 @@ ready2split %>%
   pivot_longer(cols = starts_with("threshold"), 
                names_to = "threshold", 
                values_to = "percent_agreement") %>% 
-filter(DATETIME > start & DATETIME < stop) %>% 
+  filter(threshold == "threshold_75") %>% 
+#filter(DATETIME > start & DATETIME < stop) %>% 
 ggplot()+
   geom_line(aes(x = DATETIME, y = Q_mm_day, color = percent_agreement), lwd = 1)+
-  facet_wrap(~threshold, ncol = 1)+
+  #facet_wrap(~threshold, ncol = 1)+
   theme_classic()+
-  scale_color_gradientn(colors = rev(wes_palette("Zissou1", 100, type = "continuous")))
+  scale_color_gradientn(colors = rev(wes_palette("Zissou1", 100, type = "continuous")))+
+  labs(title = "W3 75% threshold, log(TWI)",
+       x = "",
+       y = "Discharge (mm/day)")
 
 ```
-
 
 ```{r}
 #now plot whether model is right or wrong at each location
@@ -946,6 +952,7 @@ ggplot(out, aes(x = threshold, y = percent_agreement))+
 ```
 
 After meeting with Kevin today- can we predict the local persistency?
+
 ```{r}
 #using model to predict local persistency
 #should I use a linear model?
@@ -1244,6 +1251,7 @@ ggplot()+
 ```
 
 Making maps for poster
+
 ```{r}
 #read in DEM of whole valley, 1m resolution
 dem <- "./HB/1m hydro enforced DEM/dem1m.tif"
@@ -1363,22 +1371,25 @@ hill <- rast(hillshade_out)
 plot(hill)
 
 #final plot with cropped hillshade and dem, STIC locations, watershed boundary, and stream network.
-ggplot()+
+fb_map <- ggplot()+
   geom_spatraster(data = hill)+
   theme_void()+
-  theme(legend.position = "bottom")+
+  theme(legend.position = "")+
   scale_fill_gradientn(colors = c("black", "gray9", "gray48","lightgray", "white"))+
     new_scale_fill() +
   geom_spatraster(data = crop1, alpha = 0.5)+
-    geom_sf(data = fb_outline, fill = "darkslategray3", color = "black", alpha = 0.3) +
+    geom_sf(data = fb_outline, fill = NA, color = "black", alpha = 0.3) +
   geom_sf(data = fb_net, colour = "darkslategray3") +
     geom_sf(data = lcc, colour = "midnightblue", pch = 19) +
   geom_sf(data = fb_pour, colour = "black", pch = 8) +
-   scale_fill_hypso_c(palette = "dem_screen")
+   scale_fill_hypso_c(palette = "dem_screen", limits = c(200, 1000))+
+  theme(rect = element_rect(fill = "transparent", color = NA))
 
+fb_map
 ```
 
 Recreate this, but for ZZ
+
 ```{r}
 #read in DEM of whole valley, 1m resolution
 dem <- "./HB/1m hydro enforced DEM/dem1m.tif"
@@ -1499,24 +1510,26 @@ wbt_hillshade(
 )
 hill <- rast(hillshade_out)
 plot(hill)
-
 #final plot with cropped hillshade and dem, STIC locations, watershed boundary, and stream network.
-ggplot()+
+zz_map <- ggplot()+
   geom_spatraster(data = hill)+
   theme_void()+
-  theme(legend.position = "bottom")+
+  theme(legend.position = "")+
   scale_fill_gradientn(colors = c("black", "gray9", "gray48","lightgray", "white"))+
     new_scale_fill() +
   geom_spatraster(data = crop1, alpha = 0.5)+
-    geom_sf(data = zz_outline, fill = "darkslategray3", color = "black", alpha = 0.3) +
+    geom_sf(data = zz_outline, fill = NA, color = "black", alpha = 0.3) +
   geom_sf(data = zz_net, colour = "darkslategray3") +
     geom_sf(data = lcc, colour = "midnightblue", pch = 19) +
   geom_sf(data = zz_pour, colour = "black", pch = 8) +
-   scale_fill_hypso_c(palette = "dem_screen")
+   scale_fill_hypso_c(palette = "dem_screen", limits = c(200, 1000))+
+  theme(rect = element_rect(fill = "transparent", color = NA))
 
+zz_map
 ```
 
 Now do the same for W3!
+
 ```{r}
 #read in DEM of whole valley, 1m resolution
 dem <- "./HB/1m hydro enforced DEM/dem1m.tif"
@@ -1639,41 +1652,94 @@ hill <- rast(hillshade_out)
 plot(hill)
 
 #final plot with cropped hillshade and dem, STIC locations, watershed boundary, and stream network.
-ggplot()+
+w3_map <- ggplot()+
   geom_spatraster(data = hill)+
   theme_void()+
-  theme(legend.position = "bottom")+
+  theme(legend.position = "")+
   scale_fill_gradientn(colors = c("black", "gray9", "gray48","lightgray", "white"))+
     new_scale_fill() +
   geom_spatraster(data = crop1, alpha = 0.5)+
-    geom_sf(data = w3_outline, fill = "darkslategray3", color = "black", alpha = 0.3) +
-  geom_sf(data = w3_net, colour = "darkslategray3") +
+    geom_sf(data = w3_outline, fill = NA, color = "black", alpha = 0.3) +
+```
+
+
+```{r}
+geom_sf(data = w3_net, colour = "darkslategray3") +
     geom_sf(data = lcc, colour = "midnightblue", pch = 19) +
   geom_sf(data = w3_pour, colour = "black", pch = 8) +
-   scale_fill_hypso_c(palette = "dem_screen")
+   scale_fill_hypso_c(palette = "dem_screen" , limits = c(200, 1000))+
+  theme(rect = element_rect(fill = "transparent", color = NA))
+w3_map
+```
+
+```{r}
+#combine all maps
+all_map <- w3_map + fb_map + zz_map +
+  theme(rect = element_rect(fill = "transparent", color = NA))
+
+all_map
+#24 in by 16
+ggsave("threesheds.png", plot = all_map, units = c("in"),
+       width = 12, height = 8, limitsize = TRUE, scale = 2)
 ```
 
 ```{r}
 #make map of NH, pane to show where hubbard brook is
 usa <- rgeoboundaries::geoboundaries("USA", "adm1")
 NH <- usa[usa$shapeName == "New Hampshire",]
+NH_outline <- vect(NH)
 mdt <- get_elev_raster(locations = NH, z = 10, clip = "locations")
 plot(mdt)
-big <- rast(mdt)
-writeRaster(crop1, "./w3_dems/1mdem_crop.tif", overwrite = TRUE)
+big <- rast(mdt) %>% 
+  crop(NH_outline) %>% 
+  mask(NH_outline)
+writeRaster(big, "./w3_dems/NH.tif", overwrite = TRUE)
 
+NH_path <- "./w3_dems/NH.tif"
+hillshade_out <- "./w3_dems/NH_hillshade.tif"
+wbt_hillshade(
+  dem = NH_path,
+  output = hillshade_out,
+)
+hill <- rast(hillshade_out)
+hill2 <- crop(hill, NH_outline)
+hill3 <- mask(hill2, NH_outline)
+plot(hill)
+
+#read in shapefil of watershed boundaries for HB
+#path to file
+HB_bounds <- "./HB/hbef_wsheds/hbef_wsheds.shp"
+sheds <- vect(HB_bounds)
+sheds <- terra::project(sheds, crs(hill))
+
+
+#use bounds of sheds to crop NH dem
+ybounds <- c(43.916,43.96219)
+xbounds <- c(-71.80451, -71.69687)
+plot(hill, xlim = xbounds, ylim = ybounds)
 
 ggplot()+
-  geom_spatraster(data = hill)+
+  geom_spatraster(data = hill3)+
   theme_void()+
-  theme(legend.position = "bottom")+
-  scale_fill_gradientn(colors = c("black", "gray9", "gray48","lightgray", "white"))+
+  theme(legend.position = "")+
+  scale_fill_gradientn(colors = c("black", "gray9", "gray48","lightgray", "white"), na.value = NA)+
     new_scale_fill() +
-  geom_spatraster(data = crop1, alpha = 0.5)+
-    geom_sf(data = w3_outline, fill = "darkslategray3", color = "black", alpha = 0.3) +
-  geom_sf(data = w3_net, colour = "darkslategray3") +
-    geom_sf(data = lcc, colour = "midnightblue", pch = 19) +
-  geom_sf(data = w3_pour, colour = "black", pch = 8) +
+  geom_spatraster(data = big, alpha = 0.5)+
+    geom_sf(data = sheds, fill = "darkslategray3", color = "black", alpha = 0.3) +
+  # geom_sf(data = w3_net, colour = "darkslategray3") +
+  #   geom_sf(data = lcc, colour = "midnightblue", pch = 19) +
+  # geom_sf(data = w3_pour, colour = "black", pch = 8) +
    scale_fill_hypso_c(palette = "dem_screen")
-```
 
+ggplot()+
+  geom_spatraster(data = hill3)+
+  theme_void()+
+  theme(legend.position = "")+
+  scale_fill_gradientn(colors = c("black", "gray9", "gray48","lightgray", "white"), na.value = NA)+
+    new_scale_fill() +
+  geom_spatraster(data = big, alpha = 0.5)+
+    geom_sf(data = sheds, fill = "darkslategray3", color = "black", alpha = 0.3) +
+   scale_fill_hypso_c(palette = "dem_screen")+
+  lims(x = xbounds,
+       y = ybounds)
+```
