--- a/W3_STIC.Rmd
+++ b/W3_STIC.Rmd
@@ -366,10 +366,12 @@ wettest <- filter(all_w3, datetime == "2023-07-03 16:10:00")
 Make plots for the wettest time and the driest time in all 3 watersheds
 ```{r}
 #make binary columns for wet and dry
+all_w3 <- data_23 %>% 
+  filter(wshed == "W3")
 all_w3$binary <- 1
 all_w3$binary[all_w3$wetdry == "dry"] <- 0
 
-spots_flowing <- all_w3 %>% 
+spots_flowing <-  all_w3 %>% 
   group_by(datetime) %>% 
   summarise("percent_flowing" = sum(binary)/length(binary))
 
@@ -379,6 +381,11 @@ max(spots_flowing$percent_flowing)
 spots_flowing$datetime[spots_flowing$percent_flowing == max(spots_flowing$percent_flowing)]
 #minimum extent times
 min(spots_flowing$percent_flowing)
+no_flow <- spots_flowing$datetime[spots_flowing$percent_flowing == min(spots_flowing$percent_flowing)]
+
+
+filter(q_23_f, DATETIME %in% no_flow)
+
 
 spots_flowing$datetime[spots_flowing$percent_flowing == min(spots_flowing$percent_flowing)]
 
